# weatherkocli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
weathercli/: __init__.py  compass.py  config.py  settings.py  theme.py  weathercodes.py
weathercli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
